# voice_r

./: .gitignore  api.py  api_ai.py  api_youtube.py  inference.py  inference_ai.py  inference_changed.py  just.py  pyproject.toml
vocal_remover/: augment.py  pseudo.py  train.py
vocal_remover/lib/: dataset.py  nets.py
