[tool.poetry]
name = "vocal-remover"
version = "6.0.0b2"
description = ""
authors = ["tsurumeso <tsurumeso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = {version = "~=2.1.0", optional = true}
librosa = "~=0.10.0"
matplotlib = "~=3.8.0"
opencv-python = "~=4.8.0"
resampy = "~=0.4.0"
tqdm = "~=4.66.0"

[tool.poetry.extras]
torch = ["torch"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
